--- a/git_timesheet_mapper/views/git_repository_views.xml
+++ b/git_timesheet_mapper/views/git_repository_views.xml
@@ -10,7 +10,7 @@
                     <button name="action_test_connection" string="Test Connection" type="object" 
                             class="btn-primary" icon="fa-plug"
                             attrs="{'invisible': [('connection_status', '=', 'testing')]}"/>
-                    <button name="action_sync_commits" string="Sync Commits" type="object" 
+                    <button name="action_fetch_commits" string="Sync Commits" type="object" 
                             class="btn-secondary" icon="fa-refresh"
                             attrs="{'invisible': [('connection_status', '!=', 'connected')]}"/>
                     <button name="action_view_commits" string="View Commits" type="object" 
@@ -158,7 +158,7 @@
                 <button name="action_test_connection" string="Test Connection" type="object" 
                         icon="fa-plug" class="btn-link"
                         attrs="{'invisible': [('connection_status', '=', 'testing')]}"/>
-                <button name="action_sync_commits" string="Sync" type="object" 
+                <button name="action_fetch_commits" string="Sync" type="object" 
                         icon="fa-refresh" class="btn-link"
                         attrs="{'invisible': [('connection_status', '!=', 'connected')]}"/>
             </tree>
@@ -212,7 +212,7 @@
                                            t-if="record.connection_status.raw_value != 'testing'">
                                             <i class="fa fa-plug"/> Test Connection
                                         </a>
-                                        <a name="action_sync_commits" type="object"
+                                        <a name="action_fetch_commits" type="object"
                                            t-if="record.connection_status.raw_value == 'connected'">
                                             <i class="fa fa-refresh"/> Sync Commits
                                         </a>
