--- a/git_timesheet_mapper/views/git_repository_views.xml
+++ b/git_timesheet_mapper/views/git_repository_views.xml
@@ -9,13 +9,13 @@
                 <header>
                     <button name="action_test_connection" string="Test Connection" type="object" 
                             class="btn-primary" icon="fa-plug"
-                            attrs="{'invisible': [('connection_status', '=', 'testing')]}"/>
+                            invisible="connection_status == 'testing'"/>
                     <button name="action_fetch_commits" string="Sync Commits" type="object" 
                             class="btn-secondary" icon="fa-refresh"
-                            attrs="{'invisible': [('connection_status', '!=', 'connected')]}"/>
+                            invisible="connection_status != 'connected'"/>
                     <button name="action_view_commits" string="View Commits" type="object" 
                             class="btn-info" icon="fa-code-fork"
-                            attrs="{'invisible': [('total_commits', '=', 0)]}"/>
+                            invisible="total_commits == 0"/>
                     <field name="connection_status" widget="statusbar" 
                            statusbar_visible="disconnected,testing,connected,error"/>
                 </header>
@@ -52,7 +52,7 @@
                     </group>
                     
                     <group string="Authentication" name="auth_group" 
-                           attrs="{'invisible': [('is_private', '=', False)]}">
+                           invisible="is_private == False">>
                         <field name="access_token" password="True" 
                                placeholder="Personal Access Token for private repositories"/>
                         <div class="text-muted">
@@ -65,7 +65,7 @@
                     <group string="Connection Status" name="status_group">
                         <field name="last_sync_date" readonly="1"/>
                         <field name="connection_error" readonly="1" 
-                               attrs="{'invisible': [('connection_error', '=', False)]}"/>
+                               invisible="connection_error == False"/>
                     </group>
                     
                     <group string="Statistics" name="stats_group" col="3">
@@ -102,10 +102,10 @@
                 <field name="company_id" groups="base.group_multi_company"/>
                 <button name="action_test_connection" string="Test Connection" type="object" 
                         icon="fa-plug" class="btn-link"
-                        attrs="{'invisible': [('connection_status', '=', 'testing')]}"/>
+                        invisible="connection_status == 'testing'"/>
                 <button name="action_fetch_commits" string="Sync" type="object" 
                         icon="fa-refresh" class="btn-link"
-                        attrs="{'invisible': [('connection_status', '!=', 'connected')]}"/>
+                        invisible="connection_status != 'connected'"/>
             </tree>
         </field>
     </record>
