--- a/git_timesheet_mapper/views/git_commit_views.xml
+++ b/git_timesheet_mapper/views/git_commit_views.xml
@@ -43,9 +43,7 @@
                         </group>
                         <group name="mapping_info">
                             <field name="is_mapped" readonly="1" widget="boolean"/>
-                            <field name="first_mapped_date" readonly="1" 
-                                   invisible="is_mapped == False"/>
-                            <field name="last_mapped_date" readonly="1"
+                            <field name="mapping_date" readonly="1" 
                                    invisible="is_mapped == False"/>
                         </group>
                     </group>
@@ -61,54 +59,7 @@
                         <field name="lines_deleted" readonly="1" widget="integer"/>
                         <field name="total_changes" readonly="1" widget="integer"/>
                     </group>
-                    
-                    <notebook>
-                        <page string="Mappings" name="mappings" 
-                              invisible="mapping_count == 0">
-                            <field name="mapping_ids" readonly="1" nolabel="1">
-                                <list string="Timesheet Mappings" create="false" edit="false">
-                                    <field name="timesheet_line_id"/>
-                                    <field name="project_id"/>
-                                    <field name="task_id"/>
-                                    <field name="mapped_by"/>
-                                    <field name="mapping_date"/>
-                                    <field name="mapping_method"/>
-                                    <field name="description"/>
-                                </list>
-                            </field>
-                        </page>
-                        
-                        <page string="File Changes" name="file_changes">
-                            <field name="file_changes" readonly="1" nolabel="1" widget="text"/>
-                            <div class="mt-3" t-if="commit_url">
-                                <a class="btn btn-link" target="_blank" t-att-href="commit_url">
-                                    <i class="fa fa-external-link"/> View full diff on <t t-esc="repository_id.repository_type"/>
-                                </a>
-                            </div>
-                        </page>
-                        
-                        <page string="Commit Metadata" name="metadata">
-                            <group col="2">
-                                <group>
-                                    <field name="short_hash" readonly="1"/>
-                                    <field name="commit_url" readonly="1" widget="url"/>
-                                    <field name="tree_sha" readonly="1"/>
-                                    <field name="parent_sha" readonly="1"/>
-                                </group>
-                                <group>
-                                    <field name="committer_name" readonly="1"/>
-                                    <field name="committer_email" readonly="1" widget="email"/>
-                                    <field name="committer_date" readonly="1"/>
-                                </group>
-                            </group>
-                        </page>
-                    </notebook>
                 </sheet>
-                <div class="oe_chatter">
-                    <field name="message_follower_ids"/>
-                    <field name="activity_ids"/>
-                    <field name="message_ids"/>
-                </div>
             </form>
         </field>
     </record>
@@ -132,7 +83,6 @@
                 <field name="mapping_count" widget="integer"/>
                 <field name="files_changed" widget="integer"/>
                 <field name="total_changes" widget="integer"/>
-                <field name="time_since_commit" string="Age"/>
                 <button name="action_create_mapping" string="Map to Timesheet" type="object" 
                         icon="fa-link" class="btn-link"
                         invisible="is_mapped == True"/>
